objects/SignOffLevel__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Director?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Executive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_VP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales VP?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>